Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/Key_Candidate_Watchlist__c.object-meta.xml
<CustomObject>
    <label>Key Candidate Watchlist</label>
    <nameField>
        <displayFormat>WL-{000000000}</displayFormat>
        <label>Watchlist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Candidate Watchlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>