Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>IP_BranchStatus__c</referenceTo>
    <relationshipName>Key_Candidate_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>