Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/fields/Branch_Text__c.field-meta.xml
<CustomField>
    <fullName>Branch_Text__c</fullName>
    <formula>Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Text</label>
    <type>Text</type>
</CustomField>