Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sirenum__Job_Type__c</referenceTo>
    <relationshipName>Key_Candidate_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>