Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/fields/Job_Text__c.field-meta.xml
<CustomField>
    <fullName>Job_Text__c</fullName>
    <formula>Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Text</label>
    <type>Text</type>
</CustomField>