Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Watchlist__c/fields/Outstanding_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding Alerts</label>
    <type>Checkbox</type>
</CustomField>